# datascience-cookiecutter

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  Makefile  README.md  cookiecutter.json  environment.yml  pytest.ini
.github/workflows/: build.yml  project_docs.yml
docs/: README.md  conf.py  index.rst  usage.rst
docs/locales/fr/LC_MESSAGES/: README.po  index.po  structure.po
docs/structure/: cookiecutter.repo_name.rst  docs.rst  index.rst
hooks/: post_gen_project.py
locales/fr/LC_MESSAGES/: README.po  index.po  structure.po
tests/: test_build.py  test_proj_docs.py
{{ cookiecutter.repo_name }}/: .env  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg  version
{{ cookiecutter.repo_name }}/conda-envs/: environment.docs.yml  environment.sphinx-doc.osx.yml  environment.sphinx-doc.yml  environment.{{ cookiecutter.repo_name }}-docs.yml  environment.{{ cookiecutter.repo_name }}.yml
{{ cookiecutter.repo_name }}/data/: README.md
{{ cookiecutter.repo_name }}/docs/: conf.py  index.rst
{{ cookiecutter.repo_name }}/docs/_splashpage/: index.html
{{ cookiecutter.repo_name }}/docs/decisions/: index.rst
{{ cookiecutter.repo_name }}/docs/methodology/: assessment_tools.rst  background.rst  data.rst  index.rst  metrics_results.rst  model.rst  scope.rst
{{ cookiecutter.repo_name }}/docs/reference/: index.rst
{{ cookiecutter.repo_name }}/docs/usage/: index.rst
{{ cookiecutter.repo_name }}/docs/wiki/: Home.md
{{ cookiecutter.repo_name }}/notebooks/: README.md
{{ cookiecutter.repo_name }}/src/: README.md
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.__pypkg }}/: cli.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_name }}/: __init__.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name.replace('-', '_') }}/: api.py
{{ cookiecutter.repo_name }}/tests/: conftest.py  test_api.py  test_case.py  test_cli.py
{{ cookiecutter.repo_name }}/tests/testthat/: testthat.R
