[metadata]
name = {{ cookiecutter.project_name_en }}
version = file: version
description = My package description
long_description = file: README.md
keywords = one, two
license = MIT
license_files = LICENSE

[options]
package_dir =
    =src
packages=find:
# Runtime dependencies
# For more info see https://setuptools.pypa.io/en/latest/userguide/dependency_management.html#declaring-required-dependency
install_requires = 

[options.packages.find]
where=src

# Dependencies for specific functionality
# [options.extras_require]
# dev = sphinx

[flake8]
# Rule definitions: http://flake8.pycqa.org/en/latest/user/error-codes.html
# D203: 1 blank line required before class docstring
# W503: line break before binary operator
exclude = venv*,__pycache__,node_modules,bower_components,migrations,src/conf.py
ignore = D203,W503
max-complexity = 9
max-line-length = 88
extend-ignore = E203
